--- a/Source/Judoon.csproj
+++ b/Source/Judoon.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="nil.js" Version="2.5.1677" />
+    <PackageReference Include="spectre.console" Version="0.49.1" />
+    <PackageReference Include="Terminal.Gui" Version="1.17.0" />
+  </ItemGroup>
+
 </Project>
